--- a/src/contenedores/Navstyle.css
+++ b/src/contenedores/Navstyle.css
@@ -53,7 +53,7 @@ body {
 
 .menu .navbar ul li a{
     font-size: 18px;
-    padding: 20px;
+    padding: 30px;
     color: #f7f7ff;
     display: block;
 
@@ -73,6 +73,10 @@ body {
     cursor: pointer;
     display: none;
 
+}
+.flex{
+    display: flex;
+    flex-direction: row;
 }
 
 @media only screen and (max-width:991px) {
@@ -112,6 +116,16 @@ body {
     .menu-icono {
         width: 50px;
         height: 50px;
-
+        margin:10px
+    }
+    .flex{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        
+    }
+    .contentright {
+        margin:0px;
+      
     }
 }
