--- a/src/contenedores/intstyle.css
+++ b/src/contenedores/intstyle.css
@@ -5,167 +5,95 @@ body {
     background-color: rgb(19, 25, 28); /* Color de fondo general */
 }
 
-#logo{
+
+
+
+
+
+
+.contenedor {
     display: flex;
-    align-items: left;
-    border-radius: 10px;
-}
-
-/* Estilos para la navegación interna */
-.nav-interna {
-    color: white; /* Aplica el color blanco a los enlaces dentro de .nav-interna */
-    position: absolute;
-    top: 0;
-    left: 75%;
-    padding: 35px;
-    
-   
-}
-.nav-interna a {
-    color:rgba(248, 244, 244, 0.5); /* Aplica el color blanco a los enlaces dentro de .nav-interna */
-    text-decoration: none; /* Elimina la decoración de subrayado en los enlaces */
-
-}
-.primary-nav {
-    display: flex;
-    justify-content: flex-end;
-    align-items: center;
-}
-
-.primary-nav a {
-    color: white !important;
-    text-decoration: none;
-    font-size: 14px;
-    font-weight: bold;
-    margin-left: 20px; /* Agrega espaciado entre los enlaces */
-}
-
-.primary-nav a:last-child {
-    margin-right: 0; /* Elimina el margen derecho del último enlace */
-}
-
-.primary-nav a:hover {
-    color: white;
-}
-
-
-
-.contentleft {
-    width: 100%;
-    height: 90%;
-    margin: 20px 10px 20px 7%;;
-    padding: 20px;
-    background-color: rgb(19, 25, 28);
-    border-radius: 5px;
-    box-shadow: 0px 0px 10px rgba(227, 197, 126, 0.638);
-    color: white;
-    margin-top: 30px;
-    margin-bottom: 20px;
-    
-}
-.contentleft a {
-    color: white;
-}
-
-.texto{
-    color: white;
-
-}
-
-header{
-    color: white;
-    text-align: center;
-
-}
-h2,h3{
-    color: rgba(227, 197, 126, 0.638);
-    text-align: center;
-}
-.i2 {
-    color: white; 
-    text-align: center;
-    display: flex;
+    font-family: 'Garamond', serif;
     flex-direction: row;
-    margin-left: 20px;
-    margin-right: 20px;
-}
-
-.image-container {
-    margin-bottom: 20px; 
-    display: inline-block; 
-    vertical-align: top;
-    
-
-}
-
-
-.inline-image {
-    display: block; 
-    width: 200px; 
-    margin-bottom: 10px; 
-}
-
-
-.button{
-
-    background-color: rgba(238, 180, 46, 0.727);
-    color: white;
-    text-decoration: none;
-    border-radius: 5px;
-    border: none;
-    padding: 10px 20px;
-}
-
-.contentright {
-    width: 50%;
-    margin: 20px 10px 20px 40%;;
-    padding: 20px;
-    background-color: rgb(19, 25, 28);
-    border-radius: 5px;
-    box-shadow: 0px 0px 10px rgba(227, 197, 126, 0.638);
-    color: white;
-}
-.contentright a {
-    color: white !important;
-}
-
-footer{
-    text-align: center;
-    color:  rgba(238, 180, 46, 0.264);
-    background-color:rgb(29, 40, 45);
-
-}
-
-.separador{
-    width: 100%; 
-    height: 1px; 
-    background-color:  rgba(238, 180, 46, 0.354);
-    margin: 10px 0; 
-}
-
-
-header h1.title{
-    margin-top: 50px;
-    font-size: 50px;
-    margin-bottom:50px;
-}
-
-.flex{
-    display: flex;
-    flex-direction: row;
-}
-
-img{
-    width: 1900px; 
-    height: 250px;
+    width: 70%;
+    margin: 0 auto; 
     margin-top: 20px;
-    margin-left: 40px;
-    margin-right: 40px;
+    color: white;
+    margin-left: 10%;
 }
 
-.textos{
-    padding: 5px;
-    margin-bottom: 20px;
+.h2{
+    /* text-align: center; */
+    padding:10px;
+}
+
+h2{
+
+    color: #e2bd36d5;
+    text-shadow: rgb(228, 239, 222);
+    /* font-family: "Copperplate", sans-serif; */
+    letter-spacing: 6px;
+    text-align: center;
+    
+}
+
+.button {
+    display:inline-flex ;
+    padding: 10px 20px; 
+    background-color:  #e2bd36d5;; /* Color de fondo del botón */
+    color: #ffffff; 
+    text-align: center;
+    border: none; 
+    border-radius: 5px;
+    
+    
+  }
+.contenedor-galeria {
+    display: inline-block; 
+    text-align:center;
+       
+  }
+.contenedor-galeria img {
+    width: calc(70% - 10px); 
+    margin-bottom: 10px; 
+    margin-left: 10px;
+    
+    
+}
+
+.Objetivos{
+    padding: 20px;
+    color: aliceblue;
+    text-align: center;
+    background: linear-gradient(to bottom, rgba(155, 154, 151, 0.154), rgba(8, 8, 9, 0.2));
+}
+
+.foto{
+    margin: 10px;
+    margin-left:20px;
+    margin-right: 20px;
+    height: 60%;
+    width:40%
+    
+}
+
+.element{
+    margin: 10px;
+  }
+
+
+@media screen and (max-width: 768px) {
+
+    .contenedor {
+        display: flex;
+        flex-wrap: wrap; 
+        justify-content: space-between; 
+        margin: 0 auto; 
+        padding: 10px;
+        
+        text-align: center; 
+       
+    }
 }
 
 .Objetivos{
